# temp-data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  temp_data_pipeline.ipynb
.github/workflows/: ci.yml
configs/: bt_klga_aggressive.json  bt_klga_baseline.json  eval_klga_v1.json
data/: README.md
docs/: 1. data-acquisition.md  2. dataset-creation.md  3. evaluation.md  4. developer-guide.md  BACKTESTER.md  COLAB_SETUP.md  pipeline-implementation.md
docs/1. data-ingestion/: 2. data-cleaning
docs/2. feature-engineering/: feature-set
docs/phase 1/: 1. data-fetching.md  3. data-aggregation  schema-validation
figures/: analysis_summary_20260119_143143_20260119_143146.txt
notebooks/: backtest_analysis.ipynb  eval_daily_tmax_analysis.ipynb  model_development.ipynb  temp_data_pipeline.ipynb
notebooks/runs/20260120_093547/: config.json  meta.json  metrics.json  predictions.parquet  slices.json
notebooks/runs/20260121_113202/: meta.json
notebooks/runs/20260121_173246/: comparison.json  meta.json
runs/: .gitkeep
scripts/: add_plot_export.py  backtest_daily_tmax.py  build_daily_tmax.py  eval_daily_tmax.py  fetch_era5_hourly.py  fetch_noaa_hourly.py  fetch_openmeteo_daily_forecast.py  fix_forecast_consolidation.py  fix_notebook_columns.py  fix_openmeteo_fetch.py  patch_notebook_run_id.py  run_pipeline.py  setup_cds_api.py  temp_data_pipeline.ipynb
src/tempdata/: __init__.py  config.py
src/tempdata/aggregate/: __init__.py  build_daily_tmax.py
src/tempdata/backtest/: __init__.py  bins.py  calibration.py  config.py  data.py  metrics.py  models.py  pricing.py  report.py  simulator.py  strategy.py
src/tempdata/clean/: __init__.py  clean_hourly.py
src/tempdata/eval/: __init__.py  config.py  data.py  metrics.py  models.py  report.py  runner.py  slicing.py  splits.py  uncertainty.py
src/tempdata/features/: __init__.py  build_train_daily_tmax.py  rolling_stats.py
stations/: stations.csv
tests/: __init__.py  conftest.py  generate_fixtures.py  test_backtest.py  test_build_daily_tmax.py  test_build_train_daily_tmax.py  test_daily_tmax_forecast_schema.py  test_daily_tmax_schema.py  test_eval.py  test_hourly_obs_schema.py  test_validation_helpers.py
tests/eval/: test_models_baselines.py  test_multi_model.py
tests/fixtures/: daily_tmax_sample.parquet  hourly_obs_sample.parquet
(+100 files in other folders)
