[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temp-data-pipeline"
version = "0.1.0"
description = "Data pipeline for processing temperature data from NOAA"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.28",
    "numpy>=1.24",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
backtest = [
    "scipy>=1.11",
    "plotly>=5.15.0",
]
era5 = [
    "cdsapi>=0.6.1",
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
